--- a/lesson20_25.03.21/appsettings.json
+++ b/lesson20_25.03.21/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source=localhost; initial catalog=AlifBase; integrated security=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
